--- a/startpage.html
+++ b/startpage.html
@@ -180,7 +180,7 @@
 
     /* Light theme: lighter chart axis & grid */
     :root[data-theme="light"] .wx-axis text,
-    :root[data-theme="light"] text.wx-axis { fill: var(--muted); }
+    :root[data-theme="light"] text.wx-axis { fill: #9bb3c6; }
     :root[data-theme="light"] .wx-axis line { stroke: rgba(17,25,40,.28); }
     :root[data-theme="light"] .wx-ygrid line { stroke: rgba(17,25,40,.18); opacity:1; }
 
