--- a/startpage.html
+++ b/startpage.html
@@ -647,41 +647,70 @@
 
   
   // ---------- NEWS ----------
-  async function loadNews(){
-    const feed = "https://www.irozhlas.cz/rss/irozhlas";
-    const proxy = "https://ucg-heartbeat.m88wqgcdpd.workers.dev/rss";
-    const url = proxy + "?url=" + encodeURIComponent(feed) + "&t=" + Date.now();
-    try{
-      const res = await fetch(url, { cache: "no-store" });
-      if(!res.ok) throw new Error("RSS proxy vrací " + res.status);
-      const xml = await res.text();
-      const doc = new DOMParser().parseFromString(xml, "application/xml");
-      const items = Array.from(doc.querySelectorAll("item")).slice(0,10).map(it => ({
+async function loadNews(){
+  const feed = "https://www.irozhlas.cz/rss/irozhlas";
+
+  // 1) tvoje původní proxy (když zrovna funguje / má CORS)
+  const mainProxy = "https://ucg-heartbeat.m88wqgcdpd.workers.dev/rss?url="
+    + encodeURIComponent(feed)
+    + "&t=" + Date.now();
+
+  // 2) fallback veřejná proxy – pro případ, že CF worker vrátí chybu nebo nemá CORS
+  const fallback = "https://api.allorigins.win/raw?url=" + encodeURIComponent(feed);
+
+  async function fetchXml(url) {
+    const res = await fetch(url, { cache: "no-store" });
+    if (!res.ok) throw new Error("RSS proxy vrací " + res.status);
+    return res.text();
+  }
+
+  try {
+    let xml;
+    try {
+      // nejdřív zkus tvůj worker
+      xml = await fetchXml(mainProxy);
+    } catch (e) {
+      // když to spadne (CORS / 429 / cokoliv), zkus fallback
+      xml = await fetchXml(fallback);
+    }
+
+    const doc = new DOMParser().parseFromString(xml, "application/xml");
+    const items = Array.from(doc.querySelectorAll("item"))
+      .slice(0, 10)
+      .map(it => ({
         title: it.querySelector("title")?.textContent?.trim() || "Bez názvu",
         link: it.querySelector("link")?.textContent?.trim() || "#",
         pubDate: it.querySelector("pubDate")?.textContent?.trim() || ""
       }));
-      const newsBox = document.getElementById("newsBox");
-      newsBox.innerHTML = items.map(it => {
-        const tm = it.pubDate ? new Date(it.pubDate).toLocaleTimeString('cs-CZ',{hour:'2-digit',minute:'2-digit'}) : '';
-        return `
-          <div class="row" style="justify-content:space-between;gap:12px">
-            <a class="btn" href="${it.link}" target="_blank" rel="noopener" style="text-decoration:none;flex:1">
-              ${it.title}
-            </a>
-            <span class="muted" style="white-space:nowrap">${tm}</span>
-          </div>
-        `;
-      }).join("");
-    }catch(e){
-      document.getElementById("newsBox").innerHTML =
-        `<div class="error">${(e && e.message) ? e.message : e}</div>
-         <div class="muted" style="margin-top:6px">
-           Zdroj: <a class="btn" href="${feed}" target="_blank" rel="noopener">RSS iRozhlas</a>
-         </div>`;
-    }
-  }
 
+    const newsBox = document.getElementById("newsBox");
+
+    if (!items.length) {
+      newsBox.innerHTML = `<div class="error">RSS je prázdné.</div>`;
+      return;
+    }
+
+    newsBox.innerHTML = items.map(it => {
+      const tm = it.pubDate
+        ? new Date(it.pubDate).toLocaleTimeString("cs-CZ", { hour: "2-digit", minute: "2-digit" })
+        : "";
+      return `
+        <div class="row" style="justify-content:space-between;gap:12px">
+          <a class="btn" href="${it.link}" target="_blank" rel="noopener" style="text-decoration:none;flex:1">
+            ${it.title}
+          </a>
+          <span class="muted" style="white-space:nowrap">${tm}</span>
+        </div>
+      `;
+    }).join("");
+  } catch (e) {
+    document.getElementById("newsBox").innerHTML =
+      `<div class="error">${(e && e.message) ? e.message : e}</div>
+       <div class="muted" style="margin-top:6px">
+         Zdroj: <a class="btn" href="${feed}" target="_blank" rel="noopener">RSS iRozhlas</a>
+       </div>`;
+  }
+}
 
   // ---------- MHD ----------
   let currentDir = "A"; // A = Koh-i-noor, B = Kubánské náměstí
