--- a/startpage.html
+++ b/startpage.html
@@ -301,9 +301,10 @@
   const LINKS = [
     { label: "ChatGPT", url: "https://chatgpt.com" },
     { label: "Gemini", url: "https://https://gemini.google.com" },
-    { label: "Nextcloud", url: "http://192.168.1.60/status.php" },
+    { label: "Nextcloud", url: "https://94-241-91-32.sslip.io/" },
     { label: "Home Assistant", url: "http://192.168.1.60:8123/" },
-    { label: "Plex", url: "http://192.168.1.50:32400/web/index.html" }
+    { label: "Plex", url: "https://app.plex.tv/desktop/#!/" }
+    { label: "iRozhlas", url: "https://www.irozhlas.cz" }
   ];
 
   // ---------- UTIL ----------
