--- a/startpage.html
+++ b/startpage.html
@@ -302,9 +302,8 @@
     { label: "ChatGPT", url: "https://chatgpt.com" },
     { label: "Gemini", url: "https://https://gemini.google.com" },
     { label: "Nextcloud", url: "https://94-241-91-32.sslip.io/" },
-    { label: "Home Assistant", url: "http://192.168.1.60:8123/" },
+    { label: "Home Assistant", url: "https://ha.94-241-91-32.sslip.io/" },
     { label: "Plex", url: "https://app.plex.tv/desktop/#!/" }
-    { label: "iRozhlas", url: "https://www.irozhlas.cz" }
   ];
 
   // ---------- UTIL ----------
