--- a/startpage.html
+++ b/startpage.html
@@ -303,7 +303,11 @@
     { label: "Gemini", url: "https://https://gemini.google.com" },
     { label: "Nextcloud", url: "https://94-241-91-32.sslip.io/" },
     { label: "Home Assistant", url: "https://ha.94-241-91-32.sslip.io/" },
-    { label: "Plex", url: "https://app.plex.tv/desktop/#!/" }
+    { label: "Plex", url: "https://app.plex.tv/desktop/#!/" },
+    { label: "iRozhlas", url: "https://www.irozhlas.cz" },
+    { label: "Facebook", url: "https://www.facebook.com" },
+    { label: "X / Twitter", url: "https://www.x.com" },
+    { label: "Reddit", url: "https://www.reddit.com" }
   ];
 
   // ---------- UTIL ----------
