--- a/startpage.html
+++ b/startpage.html
@@ -300,7 +300,7 @@
 
   const LINKS = [
     { label: "ChatGPT", url: "https://chatgpt.com" },
-    { label: "Gemini", url: "https://https://gemini.google.com" },
+    { label: "Gemini", url: "https://gemini.google.com" },
     { label: "Nextcloud", url: "https://94-241-91-32.sslip.io/" },
     { label: "Home Assistant", url: "https://ha.94-241-91-32.sslip.io/" },
     { label: "Plex", url: "https://app.plex.tv/desktop/#!/" },
