--- a/startpage.html
+++ b/startpage.html
@@ -307,7 +307,8 @@
     { label: "iRozhlas", url: "https://www.irozhlas.cz" },
     { label: "Facebook", url: "https://www.facebook.com" },
     { label: "X / Twitter", url: "https://www.x.com" },
-    { label: "Reddit", url: "https://www.reddit.com" }
+    { label: "Reddit", url: "https://www.reddit.com" },
+    { label: "Gran Turismo závody", url: "https://www.tamayo.cz/GranTurismo/sezona2025.html" }
   ];
 
   // ---------- UTIL ----------
