--- a/startpage.html
+++ b/startpage.html
@@ -305,6 +305,9 @@
     { label: "Home Assistant", url: "https://ha.94-241-91-32.sslip.io/" },
     { label: "Plex", url: "https://app.plex.tv/desktop/#!/" },
     { label: "iRozhlas", url: "https://www.irozhlas.cz" },
+    { label: "ČT24", url: "https://ct24.ceskatelevize.cz/" },
+    { label: "OnePlay", url: "https://www.oneplay.cz/" },
+    { label: "F1 TV", url: "https://https://f1tv.formula1.com/" },
     { label: "Facebook", url: "https://www.facebook.com" },
     { label: "X / Twitter", url: "https://www.x.com" },
     { label: "Reddit", url: "https://www.reddit.com" },
