--- a/akce/Maty40.html
+++ b/akce/Maty40.html
@@ -58,7 +58,7 @@
             <ul class="space-y-6">
                 <!-- Dárek 1: Volant --><li class="flex flex-col sm:flex-row items-start sm:items-center space-y-3 sm:space-y-0 sm:space-x-6">
                     <div class="flex-shrink-0">
-                        <img src="https://i.alza.cz/Foto/LegendFoto/photos/THRU111d_1.jpg" alt="Volant k PS5" class="w-24 h-24 rounded-lg object-cover">
+                        <img src="https://placehold.co/100x100/007aff/FFFFFF?text=Volant&font=inter" alt="Volant k PS5" class="w-24 h-24 rounded-lg object-cover">
                     </div>
                     <div class="flex-grow">
                         <h3 class="text-xl font-semibold text-white">1. Volant: Thrustmaster T300 RS GT Edition</h3>
@@ -71,7 +71,7 @@
 
                 <!-- Dárek 2: Držák --><li class="flex flex-col sm:flex-row items-start sm:items-center space-y-3 sm:space-y-0 sm:space-x-6">
                     <div class="flex-shrink-0">
-                        <img src="https://i.alza.cz/Foto/LegendFoto/photos/WSP020s_2.jpg" alt="Držák na volant" class="w-24 h-24 rounded-lg object-cover">
+                        <img src="https://placehold.co/100x100/5856d6/FFFFFF?text=Dr%C5%BE%C3%A1k&font=inter" alt="Držák na volant" class="w-24 h-24 rounded-lg object-cover">
                     </div>
                     <div class="flex-grow">
                         <h3 class="text-xl font-semibold text-white">2. Držák na volant: Wheel Stand Pro</h3>
@@ -84,7 +84,7 @@
                 
                 <!-- Dárek 3: PS VR2 --><li class="flex flex-col sm:flex-row items-start sm:items-center space-y-3 sm:space-y-0 sm:space-x-6">
                     <div class="flex-shrink-0">
-                        <img src="https://i.alza.cz/Foto/LegendFoto/photos/PLVR2001a_3.jpg" alt="PS VR2" class="w-24 h-24 rounded-lg object-cover">
+                        <img src="https://placehold.co/100x100/ff2d55/FFFFFF?text=PS+VR2&font=inter" alt="PS VR2" class="w-24 h-24 rounded-lg object-cover">
                     </div>
                     <div class="flex-grow">
                         <h3 class="text-xl font-semibold text-white">3. PlayStation VR2</h3>
