--- a/index.html
+++ b/index.html
@@ -893,6 +893,14 @@
                   <p>Storyteller & reportér</p>
                 </div>
               </div>
+              <!-- NOVÁ POLOŽKA PŘIDÁNA ZDE -->
+              <div class="timeline-item">
+                <div class="timeline-year">2026</div>
+                <div class="timeline-content">
+                  <h3>Coming Soon</h3>
+                  <p>Nová výzva na obzoru</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="experience-image">
@@ -991,7 +999,8 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Viktor Tamayo. Všechna práva vyhrazena.</p>
+      <!-- AKTUALIZOVANÝ ROK V PATIČCE -->
+      <p>&copy; 2026 Viktor Tamayo. Všechna práva vyhrazena.</p>
     </div>
   </footer>
 
