--- a/index.html
+++ b/index.html
@@ -926,10 +926,10 @@
               <h3>Autodevadesátky</h3>
               <p>Vždy jsem říkal, že není umění udělat půlhodinový test, ale naopak dát vše důležité do podstatně kratšího obsahu. A tak vznikly "AutoDevadesátky" - tedy testy aut v 90 sekundách.</p>
             </div>
-            <div class="automotive-card" onclick="window.open('https://usporne.info', '_blank')" style="cursor: pointer;">
+            <div class="automotive-card" onclick="window.open('https://www.tamayo.cz/GranTurismo/sezona2025.html', '_blank')" style="cursor: pointer;">
               <i class="fas fa-users"></i>
-              <h3>Úsporně.info</h3>
-              <p>Na sklonku roku 2024 jsem se dohodl s redakcí webu Usporne.info na spolupráci a tvorbě obsahu. Pro tento web tak natáčím nejen 90s testy, ale celkově pomáhám s rozvojem obsahu a rád bych mu pomohl stát se jedním z nejnavštěvovanějších a nejdůvěryhodnějších serverů zabývajících se testováním automobilů. Stejně tak, pokud jde o jeho sociální sítě.</p>
+              <h3>Gran Turismo</h3>
+              <p>Ve volném čase se věnuji také virtuálnímu závodění. S kamarády jsme si vytvořili vlastní šampionát a pro tyto účely jsem si naprogramoval také vlastní web, na kterém evidujeme výsledky, plánujeme další závody a jsou zde i přehledné statistiky.</p>
             </div>
           </div>
         </div>
