--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
             <a href="https://ahosovidaho.github.io/vttv.html" target="_blank" rel="noopener noreferrer" class="automotive-card">
               <i class="fas fa-car"></i>
               <h3>Autotesty - VTTV.cz</h3>
-              <p>Testování a natáčení aut se věnuji již od roku 2013. Nejprve pro AutoPeriskop.cz a následně také na zakázku pro další klienty. V roce 2025 jsem začal pomáhat s rozvojem video obsahu na webu Usporne.info</p>
+              <p>Testování a natáčení aut se věnuji již od roku 2013. Nejprve pro AutoPeriskop.cz a následně také na zakázku pro další klienty. V roce 2025 jsem pomáhal s rozvojem video obsahu na webu Usporne.info</p>
             </a>
             <!-- 3. VYLEPŠENÍ: Sémantický HTML odkaz (dříve div) -->
             <a href="https://tiktok.com/@autodevadesatky" target="_blank" rel="noopener noreferrer" class="automotive-card">
@@ -966,10 +966,10 @@
               <p>Vždy jsem říkal, že není umění udělat půlhodinový test, ale naopak dát vše důležité do podstatně kratšího obsahu. A tak vznikly "AutoDevadesátky" - tedy testy aut v 90 sekundách.</p>
             </a>
             <!-- 3. VYLEPŠENÍ: Sémantický HTML odkaz (dříve div) -->
-            <a href="https://usporne.info" target="_blank" rel="noopener noreferrer" class="automotive-card">
+            <a href="https://www.tamayo.cz/GranTurismo/sezona2025.html" target="_blank" rel="noopener noreferrer" class="automotive-card">
               <i class="fas fa-users"></i>
-              <h3>Úsporně.info</h3>
-              <p>Na sklonku roku 2024 jsem se dohodl s redakcí webu Usporne.info na spolupráci a tvorbě obsahu. Pro tento web tak natáčím nejen 90s testy, ale celkově pomáhám s rozvojem obsahu a rád bych mu pomohl stát se jedním z nejnavštěvovanějších a nejdůvěryhodnějších serverů zabývajících se testováním automobilů. Stejně tak, pokud jde o jeho sociální sítě.</p>
+              <h3>Gran Turismo</h3>
+              <p>Jsem nesmírně vděčný za to, že u různých závodů (Dakar, WRC) jsem mohl v minulosti být nejen s mikrofonem, ale také i přímo za volantem - jako např. v rámci Eco Rally Bohemia. Vášeň pro závodění pak sdílím i se svými přáteli, se kterými jsme si společně ve hře Gran Turismo vytvořili menší "šampionát" a pro tyto účely jsem naprogramoval web stránku se seznamem závodů, výsledky a statistikami.</p>
             </a>
           </div>
         </div>
