Replace Home Assistant link with YouTube Downloader

--- a/startpage.html
+++ b/startpage.html
@@ -302,7 +302,7 @@
     { label: "ChatGPT", url: "https://chatgpt.com" },
     { label: "Gemini", url: "https://gemini.google.com" },
     { label: "Nextcloud", url: "https://nextcloud.tamayo.cz" },
-    { label: "Home Assistant", url: "https://ha.94-241-91-32.sslip.io/" },
+    { label: "YouTube Downloader", url: "https://metube.tamayo.cz/" },
     { label: "Plex", url: "https://app.plex.tv/desktop/#!/" },
     { label: "iRozhlas", url: "https://www.irozhlas.cz" },
     { label: "ČT24", url: "https://ct24.ceskatelevize.cz/" },
