--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
@@ -934,8 +934,8 @@
               <div class="timeline-item">
                 <div class="timeline-year">2026</div>
                 <div class="timeline-content">
-                  <h3>Coming Soon</h3>
-                  <p>Nová výzva na obzoru</p>
+                  <h3>Česká televize</h3>
+                  <p>Redakce zpravodajství</p>
                 </div>
               </div>
             </div>
