Update title for 2026 GT7 Championship page

--- a/GranTurismo/sezona2026.html
+++ b/GranTurismo/sezona2026.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Hric-Pic-Ma-Ma-Tama GT7 Championship</title>
+<title>2026 Hric-Pic-Ma-Ma-Tama GT7 Championship</title>
 
 <!-- Base styles (původní) -->
 <style>
@@ -196,7 +196,7 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
 <header id="hero">
   <div class="hero-inner">
     <img src="logo_gt7_tm.png" alt="Gran Turismo 7" class="gt7-logo" onerror="this.style.display='none'">
-    <h1>Hric-Pic-Ma-Ma-Tama GT7 Championship</h1>
+    <h1>Hric-Pic-Ma-Ma-Tama GT7 Championship 2026</h1>
   </div>
 </header>
 
