Update Firebase configuration values in index.html

--- a/poplatky/index.html
+++ b/poplatky/index.html
@@ -304,12 +304,16 @@ Podporujeme zachování principu koncesionářského financování jako pojistky
   <!-- Firebase (modul) -->
   <script type="module">
     // 1) DOPLŇ svoje Firebase config hodnoty (viz níže v návodu)
-    const firebaseConfig = {
-      apiKey: "PASTE_HERE",
-      authDomain: "PASTE_HERE",
-      projectId: "PASTE_HERE",
-      appId: "PASTE_HERE",
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyDG9TuTTj4zTilKC3rflnZHHCmhdUXUhaw",
+  authDomain: "ct-vyzva.firebaseapp.com",
+  projectId: "ct-vyzva",
+  storageBucket: "ct-vyzva.firebasestorage.app",
+  messagingSenderId: "850210625768",
+  appId: "1:850210625768:web:ab28a3b03353b29fd2d15d",
+  measurementId: "G-FDJN02CLRB"
+};
+
 
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
     import {
