--- a/poplatky/index.html
+++ b/poplatky/index.html
@@ -212,6 +212,7 @@
       line-height: 1.55;
     }
   </style>
+  <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
 
 <body>
