--- a/poplatky/index4.html
+++ b/poplatky/index4.html
@@ -9,8 +9,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Nezávislá veřejná služba potřebuje nezávislé financování">
   <meta property="og:description" content="Podepište výzvu na podporu nezávislosti veřejnoprávních médií. Nenechme si vzít svobodný prostor.">
-  <meta property="og:url" content="https://www.VASE-DOMENA.cz/"> 
-  <meta property="og:image" content="https://www.VASE-DOMENA.cz/share-image.jpg">
+  <meta property="og:url" content="https://www.TADYBUDENASE-DOMENA.cz/"> 
+  <meta property="og:image" content="https://www.TADYBUDENASE-DOMENA.cz/share-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
@@ -22,7 +22,7 @@
       --line: rgba(10, 61, 145, 0.15);
       
       /* Změna: Výraznější bílé pozadí pro lepší kontrast textu */
-      --card: rgba(255,255,255,.80);
+      --card: rgba(255,255,255,.06);
       
       --shadow: 0 18px 60px rgba(0,0,0,.25);
       --radius: 18px;
