Update share links for Facebook and X

--- a/poplatky/index.html
+++ b/poplatky/index.html
@@ -398,12 +398,12 @@ Podporujeme zachování principu koncesionářského financování jako pojistky
         
         <div class="share-title">Pomozte nám získat další podpisy:</div>
         <div class="share-btns">
-          <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.VASE-DOMENA.cz" target="_blank" class="btn-share btn-fb">
-            Sdílet na Facebooku
-          </a>
-          <a href="https://twitter.com/intent/tweet?text=Podepsal(a)%20jsem%20v%C3%BDzvu%20za%20nez%C3%A1vislost%20ve%C5%99ejnopr%C3%A1vn%C3%ADch%20m%C3%A9di%C3%AD.%20P%C5%99idejte%20se%20taky%3A&url=https%3A%2F%2Fwww.VASE-DOMENA.cz" target="_blank" class="btn-share btn-x">
-            Sdílet na X
-          </a>
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tamayo.cz%2Fpoplatky&quote=Podepsal(a)%20jsem%20v%C3%BDzvu%20za%20nez%C3%A1vislost%20ve%C5%99ejnopr%C3%A1vn%C3%ADch%20m%C3%A9di%C3%AD.%20P%C5%99idejte%20se%20taky." target="_blank" class="btn-share btn-fb">
+  Sdílet na Facebooku
+</a>
+          <a href="https://twitter.com/intent/tweet?text=Podepsal(a)%20jsem%20v%C3%BDzvu%20za%20nez%C3%A1vislost%20ve%C5%99ejnopr%C3%A1vn%C3%ADch%20m%C3%A9di%C3%AD.%20P%C5%99idejte%20se%20taky%20na&url=https%3A%2F%2Fwww.tamayo.cz%2Fpoplatky" target="_blank" class="btn-share btn-x">
+  Sdílet na X
+</a>
         </div>
       </div>
 
