Update Open Graph image URL in index.html

--- a/poplatky/index.html
+++ b/poplatky/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Nezávislá veřejná služba potřebuje nezávislé financování">
   <meta property="og:description" content="Podepište výzvu na podporu nezávislosti veřejnoprávních médií. Nenechme si vzít svobodný prostor.">
   <meta property="og:url" content="https://www.TADYBUDENASE-DOMENA.cz/"> 
-  <meta property="og:image" content="https://www.TADYBUDENASE-DOMENA.cz/share-image.jpg">
+  <meta property="og:image" content="https://www.tamayo.cz/poplatky/share-image.png">
   <meta name="twitter:card" content="summary_large_image">
 
   <style>
